--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0;
+    background: linear-gradient(90deg, rgba(54,149,224,1) 0%, rgba(54,149,231,1) 28%, rgba(21,107,183,1) 100%);
+}
