--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,7 +13,7 @@
       -ms-flex-align: center;
           align-items: center;
   height: 500px;
-  width: 400px;
+  width: 500px;
   border-radius: 10px;
   -webkit-box-shadow: 0 10px 10px 10px rgba(17, 13, 13, 0.25);
           box-shadow: 0 10px 10px 10px rgba(17, 13, 13, 0.25);
@@ -34,7 +34,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 300px;
+  width: 100%;
 }
 
 .number-sorting-container form label {
@@ -106,6 +106,27 @@
       -ms-flex-direction: row;
           flex-direction: row;
   margin-bottom: 20px;
+}
+
+.number-sorting-container form .submit_reset-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.number-sorting-container form .submit_reset-buttons #reset-button {
+  background-color: red;
 }
 
 .number-sorting-container .sorted-numbers {
