--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,29 @@
 <div class="number-sorting-container">
   <h1>Sort numbers</h1>
-  <form action="POST">
+  <form #addForm="ngForm" (ngSubmit)="onSubmit()">
     <div class="input-numbers">
       <label for="numbers">Add number: </label>
-      <input type="number" name="numbers" id="numbers" />
+      <input #numbersToAdd pattern="[0-9]" (keyup.enter)="addToList(numbersToAdd.value)" type="number" name="numbers" id="numbers"/>
     </div>  
-    <button type="button">Add</button>
+    <button (click)="addToList(numbersToAdd.value)" type="button">Add</button>
     <div class="typed-numbers">
       <p>Your numbers: </p>
-      <span>1, 2, 3</span>
+      <span *ngFor="let number of numbers">{{ number + "," }}</span>
     </div>
     <div class="select-order">  
       <label for="order">Choose sorting order: </label>
-      <select name="order" id="order">
-        <option value="ASC">Ascending</option>
+      <select #chosenOrder (change)="onSelected(chosenOrder.value)" name="order" id="order">
+        <option value="ASC" selected>Ascending</option>
         <option value="DSC">Descending</option>
       </select>
   </div>
+  <div class="submit_reset-buttons">
     <button type="submit">Sort!</button>
+    <button (click)="resetNumbers()" id="reset-button" type="button">Reset</button>
+  </div>  
   </form>
   <div class="sorted-numbers">
     <p>Your sorted numbers: </p>
-    <span>1, 2, 3, 4</span>
+    <span>{{ sortedNumbers.numbers }}</span>
   </div>
 </div>
